# third_party_wayland_standard

./: BUILD.gn  OAT.xml  README.en.md  README.md  bundle.json  gen_wayland_version_header_wrapper.sh  python2_action.py  python3_action.py  wayland_protocol.gni  wayland_scanner_wrapper.py
cursor/: os-compatibility.c
src/: connection.c  scanner.c  wayland-client.c  wayland-os.c  wayland-private.h  wayland-server.c  wayland-shm.c  wayland-util.c
tests/: os-wrappers-test.c  test-runner.c
